--- a/index.html
+++ b/index.html
@@ -180,5 +180,50 @@
         </dev>
 
   </main>
+
+  <main class="page-4">
+    <dev class="p4blok1">
+        <dev class="B1Line1">
+            <dev class="Blok">
+                <dev class="BlokName">Nutritional Plans</dev>
+                <dev class="BlokDesc">Nutritional Facts on some shitty things that you don’t care about and even we don’t , I need to replace this copy.</dev>
+            </dev>
+            <dev class="Blok">
+                <dev class="BlokName">Weight Loss</dev>
+                <dev class="BlokDesc">Nutritional Facts on some shitty things that you don’t care about and even we don’t , I need to replace this copy.</dev>
+            </dev>
+            <dev class="Blok">
+                <dev class="BlokName">Mental Peace</dev>
+                <dev class="BlokDesc">Nutritional Facts on some shitty things that you don’t care about and even we don’t , I need to replace this copy.</dev>
+            </dev>
+        </dev>
+        <dev class="B1Line2">
+            <dev class="Blok">
+                <dev class="BlokName">Home Training</dev>
+                <dev class="BlokDesc">Nutritional Facts on some shitty things that you don’t care about and even we don’t , I need to replace this copy.</dev>
+            </dev>
+            <dev class="Blok">
+                <dev class="BlokName">Work/Life Balance</dev>
+                <dev class="BlokDesc">Nutritional Facts on some shitty things that you don’t care about and even we don’t , I need to replace this copy.</dev>
+            </dev>
+            <dev class="Blok">
+                <dev class="BlokName">Cardio</dev>
+                <dev class="BlokDesc">Nutritional Facts on some shitty things that you don’t care about and even we don’t , I need to replace this copy.</dev>
+            </dev>
+        </dev>
+        
+    </dev>
+    <dev class="p4blok2">
+        <dev class="img_blok"></dev>
+        <dev class="mainblok">
+            <dev class="p4b2content">
+                <dev class="p4b2c-head">YOU SHOULD ALSO KNOW</dev><!-- <h1 class=""></h1> -->
+                <dev class="p4b2c-depression"><span>MDD affects more than 16.1 million American adults, or about 6.7%of the U.S. population age 18 and older in a given year.</span> 
+                    We at <span class="color2">ThriveTalk</span>  can help you.</dev>
+                <button class="p4b2c-btn">GET HELP NOW</button>
+            </dev>
+        </dev>
+    </dev>
+  </main>
 </body>
 </html>
